# ruv_dl

./: .gitignore  LICENSE  README.md  pyproject.toml  schema.graphql
src/ruv_dl/: cli.py  ffmpeg.py  hls_downloader.py  main.py  organize.py  ruv_client.py  ruv_urls.py  search.py  storage.py
tests/: test_client.py  test_client_integration.py  test_organize.py  test_storage.py
