[tool.poetry]
name = "ruv-dl"
version = "1.0.0"
description = "Python script to download content off the Icelandic RÚV website."
authors = ["Haukur Páll Jónsson <haukurpalljonsson@gmail.com>"]
license = "MIT License"
packages = [{ include = "ruv_dl", from = "src" }]
readme = "README.md"
repository = "https://github.com/HaukurPall/ruv-dl"
[tool.poetry.scripts]
ruv-dl = "ruv_dl.cli:cli"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.8"
m3u8 = "^0.9.0"
gql = { extras = ["all"], version = "^3.0.0rc0", allow-prereleases = true }
click = "^8.0.3"
tabulate = "^0.8.9"
ffpb = "^0.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.12.2"
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
