[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruv-dl"
version = "1.1.2"
description = "Python script to download content off the Icelandic RÚV website."
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Haukur Páll Jónsson", email = "haukurpalljonsson@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "m3u8>=0.9.0,<1.0.0",
    "gql[all]>=3.0.0rc0,<4.0.0",
    "click>=8.0.3,<9.0.0",
    "tabulate>=0.8.9,<1.0.0",
    "ffpb>=0.4.1,<1.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest>=7.1.1,<8.0.0"]

[project.urls]
Repository = "https://github.com/HaukurPall/ruv-dl"

[project.scripts]
ruv-dl = "ruv_dl.cli:cli"


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
