[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruv-dl"
version = "1.4.1"
description = "Python script to download content off the Icelandic RÚV website."
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Haukur Páll Jónsson", email = "haukurpalljonsson@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "m3u8>=0.9.0,<1.0.0",
    "ffpb>=0.4.1,<1.0.0",
    "typer >=0.16.0",
    "rich >=14.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["ruff", "pytest>=7.1.1,<8.0.0", "pytest-asyncio"]

[project.urls]
Repository = "https://github.com/HaukurPall/ruv-dl"

[project.scripts]
ruv-dl = "ruv_dl.cli:app"

[tool.ruff]
line-length = 120

[tool.pyright]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
